2002-11-05  Pierre Muller  <muller@ics.u-strasbg.fr>

	* values.c (value_change_enclosing_type): Set 
	enclosing_type field correctly also for the case where 
	more memory needs to be allocated.

2002-11-03  Mark Kettenis  <kettenis@gnu.org>

	* i387-tdep.c (i387_print_float_info): Call fputs_filtered instead
	of puts_filtered.

	* i387-tdep.c (i387_print_float_info): Replace calls to
	register_read and deprecated_read_register_gen with calls to
	frame_register_read, and make the necessary adjustments to the
	surrounding code.

2002-11-02  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh (register_reggroup_p): Allow default value.
	* gdbarch.h, gdbarch.c: Regenerate.

2002-11-02  Andrew Cagney  <ac131313@redhat.com>

	* regcache.h: Add coment indicating replacements for deprecated
	functions.

2002-11-02  Andrew Cagney  <cagney@redhat.com>

	* reggroups.h, reggroups.c: New files.
	* regcache.c: Include "reggroups.h".
	(enum regcache_dump_what): Add `regcache_dump_groups'.
	(regcache_dump): Contract size of the "Type" column.  When
	specified, dump the register's groups.
	(maintenance_print_register_groups): New function.
	(_initialize_regcache): Add command `maint print register-groups'.
	* Makefile.in (COMMON_OBS): Add reggroups.o
	(SFILES): Add reggroups.c.
	(reggroups_h): Define.
	(regcache.o, gdbarch.o): Update dependencies.
	(reggroups.o): Specify dependencies.
	* gdbarch.sh (register_reggroup_p): Add pure multi-arch method.
	Add opaque declaration for `struct reggroup' in generated .h file.
	Include "reggroups.h" in generated .c file.
	gdbarch.h, gdbarch.c: Re-generate.

2002-11-02  Andrew Cagney  <cagney@redhat.com>

	* regcache.h (deprecated_read_register_gen): Rename
	read_register_gen.
	(deprecated_write_register_gen): Rename write_register_gen.
	* i387-tdep.c: Update.
	* x86-64-linux-nat.c: Update
	* wince.c: Update.
	* thread-db.c: Update.
	* win32-nat.c: Update.
	* mips-tdep.c: Update.
	* d10v-tdep.c: Update.
	* cris-tdep.c: Update.